# ci-maintenance

./: .gitignore  CHANGELOG.md  README.md  cabal.project  ci-maintenance.cabal  travis-maintenance.cabal
src/: CabalProjectParser.hs  Hacks.hs  Main.hs  Repos.hs  TravisYmlHacks.hs
src/HaskellCI/: Newtypes.hs  Optimization.hs  ParsecError.hs  Project.hs
