name:                travis-maintenance
version:             0.1
synopsis:            Miscellaneous hacks I use to maintain projects with .travis.yml scripts
description:         Miscellaneous hacks I use to maintain projects with .travis.yml scripts.
homepage:            https://github.com/RyanGlScott/travis-maintenance
bug-reports:         https://github.com/RyanGlScott/travis-maintenance/issues
license:             BSD3
license-file:        LICENSE
author:              Ryan Scott
maintainer:          Ryan Scott <ryan.gl.scott@gmail.com>
stability:           Experimental
copyright:           (C) 2018 Ryan Scott
category:            Testing
build-type:          Simple
extra-source-files:  CHANGELOG.md, README.md
cabal-version:       >=1.10

executable travis-maintenance
  main-is:             Main.hs
  other-modules:       CabalProjectParser
                       Repos
  build-depends:       base                 >= 4.12 && < 4.13
                     , Cabal                >= 2.4  && < 2.6
                     , containers           >= 0.6  && < 0.7
                     , directory            >= 1.3  && < 1.4
                     , filepath             >= 1.4  && < 1.5
                     , optparse-applicative >= 0.14 && < 0.15
                     , process              >= 1.6  && < 1.7
                     , text                 >= 1.2  && < 1.3
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -threaded -rtsopts
