cabal-version:       2.2
name:                travis-maintenance
version:             0.1
synopsis:            Miscellaneous hacks I use to maintain projects with .travis.yml scripts
description:         Miscellaneous hacks I use to maintain projects with .travis.yml scripts.
homepage:            https://github.com/RyanGlScott/travis-maintenance
bug-reports:         https://github.com/RyanGlScott/travis-maintenance/issues
license:             GPL-3.0-or-later
license-file:        LICENSE
author:              Ryan Scott
maintainer:          Ryan Scott <ryan.gl.scott@gmail.com>
stability:           Experimental
copyright:           (C) 2018 Ryan Scott
category:            Testing
build-type:          Simple
extra-source-files:  CHANGELOG.md, README.md

source-repository head
  type:     git
  location: https://github.com/RyanGlScott/travis-maintenance.git

executable travis-maintenance
  main-is:             Main.hs
  other-modules:       Repos

                       -- Copied directly from haskell-ci (GPL-3.0-licensed)
                       HaskellCI.Newtypes
                       HaskellCI.Optimization
                       HaskellCI.Project
                       HaskellCI.ParsecError
  build-depends:       base                 >= 4.12     && < 4.13
                     , bytestring           >= 0.10.8.1 && < 0.11
                     , Cabal                >= 3.0      && < 3.1
                     , containers           >= 0.6      && < 0.7
                     , directory            >= 1.3      && < 1.4
                     , extra                >= 1.6      && < 1.7
                     , filepath             >= 1.4      && < 1.5
                     , Glob                 >= 0.10     && < 0.11
                     , optparse-applicative >= 0.14     && < 0.16
                     , ordered-containers   >= 0.1      && < 0.3
                     , process              >= 1.6      && < 1.7
                     , split                >= 0.2      && < 0.3
                     , text                 >= 1.2      && < 1.3

                       -- haskell-ci dependencies
                     , base-compat          ^>=0.10.5
                     , generic-lens         ^>=1.1.0.0
                     , microlens            ^>=0.4.10
                     , pretty               ^>=1.1.3.3
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -threaded -rtsopts
