cabal-version:       2.2
name:                travis-maintenance
version:             0.1
synopsis:            Miscellaneous hacks I use to maintain projects with .travis.yml scripts
description:         Miscellaneous hacks I use to maintain projects with .travis.yml scripts.
homepage:            https://github.com/RyanGlScott/travis-maintenance
bug-reports:         https://github.com/RyanGlScott/travis-maintenance/issues
license:             GPL-3.0-or-later
license-file:        LICENSE
author:              Ryan Scott
maintainer:          Ryan Scott <ryan.gl.scott@gmail.com>
stability:           Experimental
copyright:           (C) 2018 Ryan Scott
category:            Testing
build-type:          Simple
extra-source-files:  CHANGELOG.md, README.md

source-repository head
  type:     git
  location: https://github.com/RyanGlScott/travis-maintenance.git

executable travis-maintenance
  main-is:             Main.hs
  other-modules:       Repos
  build-depends:       base                  >= 4.14     && < 4.15
                     , bytestring            >= 0.10.8.1 && < 0.11
                     , Cabal                 >= 3.2      && < 3.3
                     , cabal-install-parsers >= 0.3.0.1  && < 0.4
                     , containers            >= 0.6      && < 0.7
                     , directory             >= 1.3      && < 1.4
                     , extra                 >= 1.7      && < 1.8
                     , filepath              >= 1.4      && < 1.5
                     , Glob                  >= 0.10     && < 0.11
                     , optparse-applicative  >= 0.14     && < 0.16
                     , ordered-containers    >= 0.1      && < 0.3
                     , process               >= 1.6      && < 1.7
                     , regex-compat          >= 0.95     && < 0.96
                     , semigroups            >= 0.19.1   && < 0.20
                     , split                 >= 0.2      && < 0.3
                     , text                  >= 1.2      && < 1.3
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -threaded -rtsopts
